sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:13: error: illegal start of simple expression
  }
  ^