sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut:Int=0
  var fin:Int=getNombreValeurs()-2
  for (j <-debut to fin){
    for (i <- debut to fin-j) {
      if (plusPetit(i+1, i)){
        echange(i, i+1)  
      }
      fin=fin-1
    }
    for(i<- debut to fin)
	}
}